<resources>
    <string name="app_name">校园闲置</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">上架</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_me">我</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="phone_verify">手机验证</string>
    <string name="seconds">秒</string>
    <string name="resend">重新发送</string>
    <string name="finish">修改完成</string>
    <string name="personal_data">个人资料</string>
    <string name="clean">清理缓存</string>
    <string name="about_us">关于我们</string>
    <string name="sign_out">退出登陆</string>
    <string name="words">留言</string>
    <string name="collection">收藏</string>
    <string name="order_now">立即下单</string>
    <string name="send">发送</string>
    <string name="input_message">输入文字信息</string>

    <string name="upload">我发布的</string>
    <string name="my_selled">我卖出的</string>
    <string name="buy">我买到的</string>
    <string name="my_like">我的收藏</string>
    <string name="setup">设置</string>
    <string name="personal_order">个人订单</string>
    <string name="my_order">我的订单</string>
    <string name="order_detail">订单详情</string>
    <string name="goods_detail">物品详情</string>
    <string name="buy_goods">货物购买</string>
    <string name="tip">请选择分类</string>
    <string name="actual_pay">实付款:</string>
    <string name="order_confirm">确认订单</string>
    <string name="phone_or_wechat">手机/微信号</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_publish_fragment">Hello publish fragment</string>
    <string name="hello_me_fragment">Hello me fragment</string>
</resources>
